--- a/index.html
+++ b/index.html
@@ -19,12 +19,20 @@
     <link rel="stylesheet" href="./src/styles/buttons.css" />
     <link rel="stylesheet" href="./src/styles/containers_and_frames.css" />
 
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./src/assets/favicon/Favicon.ico" type="image/x-icon">
+
     <!-- main style -->
     <link rel="stylesheet" href="./src/styles/main.css" />
 
     <title>Yu-Gi-Oh Jo-ken-po Edtion</title>
   </head>
   <body>
+    <audio id="bgm" loop>
+      <source src="./src/assets/audios/egyptian_duel.mp3"
+      type="audio/mp3" />
+    </audio>
+
     <div class="bg-video">
       <video class="video" autoplay loop muted>
         <source src="./src/assets/video/yugi.mp4" type="video/mp4" />
@@ -49,7 +57,7 @@
         <div class="card-box__container">
           <div class="card-box framed" id="computer-cards"></div>
 
-          <div class="card-versus__container">
+          <div class="card-versus__container ">
             <div class="versus-top">
               <div class="card-infield">
                 <img id="player-field-card" height="180px" width="125px" />
